Synch with jakarta branch.